--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@theme {
+  --color-primary-50: #f1ff9f;
+  --color-primary-100: #ebff77;
+  --color-primary-150: #e5ff50;
+  --color-primary-200: #dfff28;
+  --color-primary-250: #d8ff00;
+  --color-primary-300: #c0e107;
+  --color-primary-350: #a8c30c;
+  --color-primary-400: #91a811;
+  --color-primary-450: #7b8e13;
+  --color-primary-500: #667515;
+  --color-secondary-50: #f1f1f1;
+  --color-secondary-100: #d4d4d4;
+  --color-secondary-150: #b8b8b8;
+  --color-secondary-200: #9c9c9c;
+  --color-secondary-250: #808080;
+  --color-secondary-300: #646464;
+  --color-secondary-350: #484848;
+  --color-secondary-400: #2c2c2c;
+  --color-secondary-450: #1f1f1f;
+  --color-secondary-500: #151515;
+}
