--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
 @theme {
   --color-primary-50: #f1ff9f;
   --color-primary-100: #ebff77;
@@ -24,3 +25,4 @@
   --color-secondary-450: #1f1f1f;
   --color-secondary-500: #151515;
 }
+*/
